--- a/views/inputmutasi.ejs
+++ b/views/inputmutasi.ejs
@@ -58,27 +58,29 @@
         <div class="container-fluid">
           <h3>Distribusi Barang</h3>
           <hr />
-          <form class="mt-4" action="/distribusi/create" method="post">
-            <% dataBarang.forEach(elementBarang => { %>
+          <form class="mt-4" action="/mutasi" method="post" id="form">
+            
               <div class="row">
                 <div class="col-md-7">
                   <div class="row mb-3">
                     <label for="inputIdRuangan" class="col-sm-3 col-form-label">Kode Barang</label>
                     <div class="col-sm-3">
-                      <input type="hidden" name="id_barang" value="<%= elementBarang.id_barang %>">
-          <input type="text" class="form-control" id="inputIdRuangan" name="kode_barang" value="<%= elementBarang.kode_barang %>" readonly/>
+                      <input type="hidden" name="id_barang">
+                      <input type="text" class="form-control" id="inputIdRuangan" name="kode_barang" value="<%= getDetail[0].barang.kode_barang %>" readonly/>
                     </div>
                   </div>
                   <div class="row mb-3">
                     <label for="inputNamaRuangan" class="col-sm-3 col-form-label">Nama Barang</label>
                     <div class="col-sm-9">
-                      <input type="text" class="form-control" id="inputNamaRuangan" readonly name="nama_barang"value="<%= elementBarang.nama_barang %>"/>
+                      <input type="text" class="form-control" id="inputNamaRuangan" readonly name="nama_barang" value="<%= getDetail[0].barang.nama_barang %>"/>
                     </div>
                   </div>
-            <% }) %>
+                
                 <div class="row mb-3">
                   <label for="inputJumlah" class="col-sm-3 col-form-label">Jumlah</label>
                   <div class="col-sm-2">
+                    <% console.log(jumlahBarang) %>
+                    <input type="hidden" name="jumlahBarang" value="<%= jumlahBarang %>">
                     <input type="number" class="form-control" id="inputJumlah" name="jumlah"/>
                   </div>
                 </div>
@@ -113,16 +115,16 @@
                     <label for="pilihRuangan" class="visually-hidden">Pilih Ruangan</label>
                     <select id="pilihRuangan" class="form-select" name="id_ruangan">
                       <option selected>Pilih Ruangan</option>
-                      <% dataRuangan.forEach(element => { %>
+                      <% getRuangan.forEach(element => { %>
                         <option value="<%= element.id_ruangan %>"><%= element.nama_ruangan %></option>
-                      <% }) %> 
+                      <% }) %>
                     </select>
                   </div>
                 </div>
                 <div class="row mb-3">
                   <div class="col-sm-3"></div>
                   <div class="col-sm-9">
-                    <button type="submit" class="btn btn-success">Simpan</button>
+                    <button class="btn btn-success">Simpan</button>
                   </div>
                 </div>
               </div>
@@ -132,18 +134,7 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <script>
-      function cek(){
-        let jumlah = Number(document.getElementById('inputJumlah').value);
-        // alert(jumlah +' '+typeof(jumlah))
-        let baik = Number(document.getElementById('baik').value);
-        let kurang_baik = Number(document.getElementById('kurang_baik').value);
-        let rusak_berat = Number(document.getElementById('rusak_berat').value);
-        if(baik === jumlah){ 
-            document.getElementById('kurang_baik').value = "0";
-            document.getElementById('rusak_berat').value = "0";        
-        }
-      }
+    <script type="text/javascript">
     </script>
   </body>
 </html>
